styles/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  font-size: 17px;
  font-family: "Poppins", sans-serif;
  color: #3c3744;
}
body {
  background-color: rgb(238, 233, 209);
}
header h1 {
  font-size: 4em;
  text-align: center;
  font-family: serif;
}
#info {
  width: 80vw;
  margin: 0 auto;
  padding: 2em;
  gap: 0.9em;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.info-box {
  border: 1px solid rgb(187, 133, 133);
  padding: 1rem;
  border-radius: 0.4rem;
}
#desc {
  flex: 15 1 350px;
}
#status {
  display: flex;
  flex-direction: column;
  gap: 5px;
  flex: 1 1 350px;
}
#status button {
  height: 2em;
  width: 8em;
  font-size: 17px;
  flex: 1 1 350px;
  margin-right: 1em;
  margin-bottom: 0.4em;
}
button {
  font-family: "Poppins", sans-serif;
  cursor: pointer;
  border: none;
}
.bold {
  font-weight: bold;
}
footer {
  background-color: #f2cc8f;
  width: 100%;
  position: absolute;
  display: inline-block;
  bottom: 0px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 10px;
}
#add-book {
  background-color: #f2cc8f;
}
#add-book:hover {
  background-color: #e7bf7f;
}
a {
  text-decoration: none;
}
.book {
  height: 150px;
  width: 356px;
  background-color: #f2cc8f;
  box-shadow: inset rgb(0 0 0 / 15%) 0 0 0 1px;
}
#books-container {
  display: flex;
  flex-wrap: wrap;
  width: 80vw;
  gap: 10px;
  /* justify-content: center; */
  margin: 0 auto;
  padding: 1.5em;
  gap: 0.9em;
}
@media (max-width: 800px) {
  footer {
    position: relative;
  }
  #books-container {
    padding: 0em;
  }
}
#addBookModal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  background-color: rgba(0, 0, 0, 0.4);
  height: 100vh;
  width: 100vw;
}
.modal-content {
  background-color: #f2cc8f;
  color: rgba(22, 100, 133, 0.787);
  margin: 15% auto;
  max-width: 540px;
  height: 410px;
  padding: 10px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  font-size: 16px;
}
.modal-head {
  display: flex;
  width: 100%;
  justify-content: space-between;
}
.modal-head .fa-xmark {
  position: relative;
  top: 8px;
  color: rgb(180, 112, 100);
  font-size: 22px;
}
i:hover {
  cursor: pointer;
}
.separator {
  border-bottom: solid 1px rgba(0, 0, 0, 0.15);
  margin: 16px 0;
  display: block;
}
input {
  width: 100%;
  height: 33px;
  padding: 6px;
  margin-bottom: 15px;
  font-size: 17px;
  font-family: "Poppins", serif;
  color: #3c3744;
  border: solid 1px rgba(0, 0, 0, 0.15);
  border-radius: 3px;
  outline: none;
}

/* Hiding arrows in number field  */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}
/* Checkbox */
.read-container {
  display: flex;
}
.read-container input {
  width: 20px;
  height: 22px;
  margin-right: 10px;
  cursor: pointer;
}
.buttons-holder {
  display: flex;
  justify-content: center;
}
#submit-btn {
  padding: 5px;
  width: 80px;
}
#submit-btn:hover {
  background-color: rgba(91, 158, 91, 0.438);
}
.fa-github:hover {
  animation: rotate 1s linear;
}
@keyframes rotate {
  0% {
    transform: rotate(0deg);
    font-size: 30px;
  }
  50% {
    transform: rotate(180deg);
    font-size: 30px;
  }
  100% {
    transform: rotate(360deg);
    font-size: 30px;
  }
}

